<resources>
    <string name="app_name">TalkTweeter</string>
    <string name="login_failed">Looks like something went wrong with login. Please try again.</string>
    <string name="prepend">Speaker</string>
    <string name="append">Hashtag(s)</string>
    <string name="body">Body</string>
    <string name="finish_talk">Finish Talk</string>
    <string name="title_tweet_activity">Send next update</string>
    <string name="send_next_length">Send next update (%d)</string>
    <string name="update_empty">Fill something in. You can\'t send an empty update!</string>
    <string name="tweet_too_long">Combined message too long!</string>
    <string name="attach_a_photo">Attach a photo</string>
    <string name="get_photo">Take or select a photo to attach to current tweet</string>
    <string name="photo_attachment_failed">Photo attachment failed</string>
    <string name="your_photo">Your photo</string>
    <string name="log_into_twitter_intro">Please log into your Twitter account to get started!</string>
    <string name="version_number">Version %s</string>
    <string name="open_source_libraries">Open Source Libraries</string>
    <string name="unable_to_send">Unable to send a tweet. Here\'s the error: %s</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="privacy_policy">TalkTweeter doesn\'t keep any of your personal information either locally or online (if you don\'t believe me, see for yourself: https://github.com/emerssso/livetweet).\n\nHowever, it does have a privacy policy to comply with Google\'s rules. It is available here: https://www.iubenda.com/privacy-policy/8224947.\nPlease accept the policy before continuing to use the app.</string>
    <string name="policy_not_accepted">Please accept the privacy policy before using TalkTweeter</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="view_source_code">View Source Code</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="finish_thread">Do you want to finish the current talk thread?</string>
    <string name="log_out">Log out</string>
    <string name="confirm_log_out">Are you sure you want to log out?</string>
    <string name="storage_perm_explanation">We need to write files so that we can cache pictures taken before we upload them to Twitter</string>
    <string name="log_in_to_twitter">Log in to Twitter</string>
</resources>
