<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tweet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.emerssso.livetweet.TweetActivity"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraint">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/title_tweet_activity"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/layoutPrepend"
            tools:layout_constraintRight_creator="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editPrepend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prepend">
                <requestFocus/>
            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/layoutAppend"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutPrepend"
            tools:layout_constraintRight_creator="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editAppend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/append"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/layoutBody"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutAppend"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/layoutAppend"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/layoutAppend">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/body"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/attachedPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_insert_photo_white_24dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutBody"
            android:visibility="gone"
            android:contentDescription="@string/your_photo"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@drawable/ic_send_white_24dp"
        android:tint="@android:color/white"
        android:id="@+id/floatingActionButton"
        android:layout_margin="16dp"
        app:layout_anchor="@id/constraint"
        app:layout_anchorGravity="bottom|right|end"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:onClick="sendTweet"/>
</android.support.design.widget.CoordinatorLayout>
